--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="Three.js FPS game with Solana integration"
     />
 
-    <title>Bring Back Gladys</title>
+    <title>Zombifi</title>
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="/assets/images/icon-192x192.png" />
 
@@ -23,7 +23,7 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="apple-mobile-web-app-title" content="Bring Back Gladys" />
+    <meta name="apple-mobile-web-app-title" content="Zombifi" />
     <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
     <link rel="icon" href="/assets/images/icon-192x192.png" sizes="192x192" />
     <link rel="icon" href="/assets/images/icon-512x512.png" sizes="512x512" />
